Section obras con bolitas naranjas modificadas con css

--- a/css/main.css
+++ b/css/main.css
@@ -15,6 +15,13 @@ img#logo {
     padding: 0.5rem;
 }
 
+.menu-principal {
+    display: flex;
+    list-style: none;
+    padding: 0;
+    margin: 0;
+}
+
 a {
     text-decoration: none;
     font-size: 1.2rem;
@@ -23,7 +30,6 @@ a {
     color: black;
     font-weight: 500;
 }
-
 .main {
     background-color: #b4c2dd;;
     color: white;
@@ -44,8 +50,34 @@ a {
     font-size: 2.6rem;
     width: 25vw;
 }
-
-
+section.Obras {
+    padding: 2rem 0;
+}
+.sections {
+    display: flex;
+    justify-content: center;
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    border-radius: 2rem;
+    align-items: center;
+    gap: 4rem;
+}
+li.section-item {
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+    border-radius: 50%;
+    background-color: orange;
+    width: 5rem;
+    height: 5rem;
+}
+a.text-anchor {
+    font-size: 0.60rem;
+    padding: 1.9rem 0.75rem;
+    margin: 0;
+    text-transform: uppercase;
+}
 footer {
     background-color: pink;
 }
