--- a/css/main.css
+++ b/css/main.css
@@ -78,6 +78,39 @@ a.text-anchor {
     margin: 0;
     text-transform: uppercase;
 }
+table {
+    width: 50%;
+    margin: 0 auto;
+    font-size: 0.9rem;
+    padding: 0 0 1rem 0;
+}
+.Premios-title {
+    text-align: center;
+    margin: 2rem 0 3rem 0;
+    font-size: 2.8rem;
+}
+span.date {
+    border: 2px solid blue;
+    background: orange;
+    padding: 1rem 1.2rem;
+    font-size: 1rem;
+    font-weight: bold;
+}
+td {
+    padding-left: 4rem;
+}
+.primer-premio {
+    height: 6rem;
+}
+section.premios {
+    color: black;
+}
 footer {
-    background-color: pink;
+    background-color: black;
+    color: white;
+}
+p.copyright {
+    margin: 0;
+    padding: 17px;
+    text-align: center;
 }
